# merkle-distributor

./: Cargo.toml  README.md  rustfmt.toml
crates/api/: Cargo.toml
crates/api/data/: example1.json  example2.json
crates/api/src/: api.rs  data_parser.rs  endpoints.rs  lib.rs  main.rs
crates/api/tests/: api_tests.rs
crates/indexed-merkle-tree/: Cargo.toml
crates/indexed-merkle-tree/src/: errors.rs  hasher.rs  lib.rs  node.rs  proof.rs  tree.rs
crates/indexed-merkle-tree/tests/: tree.rs
