[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/api.rs"

[dependencies]
# Merkle tree
indexed-merkle-tree = { path = "../indexed-merkle-tree" }
# Web service
actix-web = "4"
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Integer
primitive-types = "0.12"
# Logging
env_logger = "0.11"