[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/api.rs"

[dependencies]
# Merkle tree
indexed-merkle-tree = { path = "../indexed-merkle-tree" }
# Web service
actix-web = "4"
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
# Integer
primitive-types = "0.12"
# Logging
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
actix-rt = "2"